# mangadex-downloader

./: .gitignore  CMakeLists.txt  README.md
include/: Chapter.h  MIMEType.h  Manga.h  Option.h  PartialChapter.h  Sephamore.h
src/: Chapter.cpp  MIMEType.cpp  Manga.cpp  Option.cpp  PartialChapter.cpp  Sephamore.cpp  main.cpp
